fix unsupported operation exception